--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,3 +39,11 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+  deploy:
+    name: Update argocd repo
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+    - name: Check out argocd repo
+      uses: actions/checkout@v4
+
