--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
   push_to_registry:
     name: Push Home Operator Docker image
@@ -43,7 +46,30 @@ jobs:
     name: Update argocd repo
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+
     steps:
+    - name: Install yq tool to modify yaml
+      run: |
+        sudo wget https://github.com/mikefarah/yq/releases/download/v4.43.1/yq_linux_amd64 -O /usr/local/bin/yq
+        sudo chmod +x /usr/local/bin/yq
+
     - name: Check out argocd repo
       uses: actions/checkout@v4
+      with:
+        repository: paldab-home/argo-apps
+        token: ${{ secrets.ARGOCD_PAT }}
+    
+    - name: Update helm chart to tag version
+      run: |
+        yq e -i '.common.controllers.main.containers."home-agent-operator".image.tag = "${{ github.ref_name }}"' ./helm-charts/charts/home-agent-operator/values.yaml
+        yq e -i '.version = "${{ github.ref_name }}"' -i ./helm-charts/charts/home-agent-operator/Chart.yaml
+        yq e -i '.appVersion = "${{ github.ref_name }}"' -i ./helm-charts/charts/home-agent-operator/Chart.yaml
+         
+    - name: Push changes to helm chart repo
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add ./helm-charts/charts/home-agent-operator
+        git commit -m "Update app to tag ${{ github.ref_name }}"
+        git push
 
