updating github actions, making push depend on build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
   deploy:
     name: Update argocd repo
     runs-on: ubuntu-latest
+    needs: push_to_registry
     if: startsWith(github.ref, 'refs/tags/')
 
     steps:
